--- a/src/SupportCircle.css
+++ b/src/SupportCircle.css
@@ -134,7 +134,7 @@
 }
 
 .form-input-name,
-.form-input-phone {
+.form-input-email {
     width: 100%;
     height: 55px;
     background-color: white; 
@@ -148,7 +148,7 @@
 }
 
 .form-input-name:focus,
-.form-input-phone:focus {
+.form-input-email:focus {
     outline: 2px solid #8B5FBF;
     border-color: #8B5FBF;
 }
